# advisory-cron

./: .docs-gate.toml  .gitignore  .mcp.json  .sos-stack.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/agents/: architect.md  orchestrator.md  worker.md
.claude/commands/: advisory-scan.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  DISCOVERIES.md  PROJECT.md  RULES.md
docs/discoveries/: P001.md  P002.md  P003.md  P004.md  P005.md  P006.md  P007.md  P008.md  P009.md  P010.md  P011.md  P012.md  P013.md  P014.md  P015.md
docs/security/: .advisory-scan-state  INVARIANTS.md
docs/ticket/: P001-scaffold-cli-surface.md  P002-config-toml-serde.md  P003-launchd-plist-register.md  P004-task-runner-heartbeat.md  P005-status-reporter.md  P006-mcp-server-wrapper.md  P007-readme-architecture-polish.md  P008-telegram-alert-on-fail.md  P009-retry-policy.md  P010-crash-safe-heartbeat.md  P011-debt-cleanup.md  P012-scheduler-trait-abstract.md  P013-linux-crontab-impl.md  P014-inv22-23-ci-matrix.md  P015-readme-linux-quickstart.md
scripts/: session-start-banner.sh
src/: alert.rs  config.rs  heartbeat.rs  launchd.rs  main.rs  runner.rs
src/cli/: init.rs  mcp.rs  mod.rs  register.rs  run.rs  status.rs  unregister.rs
src/core/: config_path.rs  init.rs  mod.rs  register.rs  run.rs  status.rs  unregister.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/scheduler/: linux.rs  (+2 more)
tests/: cli_help.rs  cli_init.rs  cli_mcp.rs  cli_register.rs  cli_register_linux.rs  cli_run.rs  cli_run_alert.rs  cli_run_retry.rs  cli_status.rs
