[package]
name = "advisory-cron"
version = "0.1.0"
edition = "2024"
description = "Local cron wrapper for periodic checks (advisory scan, daily report, etc.) — fires Claude Code slash commands via launchd/cron with heartbeat + Telegram alert on fail"
license = "MIT"
repository = "https://github.com/aspelldenny/advisory-cron"
homepage = "https://github.com/aspelldenny/advisory-cron"
keywords = ["cron", "scheduler", "launchd", "claude-code", "automation"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros", "process", "time", "fs"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
